# niffler-py-st3

./: LICENSE  README.md
niffler_ui_tests/: .env  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
niffler_ui_tests/configs/: config.py  config.yaml  settings.py
niffler_ui_tests/configs/_settings/: browser_settings.py  env_settings.py  log_settings.py  report_settings.py
niffler_ui_tests/configs/loader/: configs.py  fixtures.py  pytest_plugins.py
niffler_ui_tests/fixtures/auth_niffler/: db.py  delete_user.py
niffler_ui_tests/fixtures/common/: browser.py  logger.py  page.py  report.py  settings.py
niffler_ui_tests/fixtures/currency_niffler/: db.py
niffler_ui_tests/fixtures/frontend_niffler/: client.py  pages.py
niffler_ui_tests/fixtures/spend_niffler/: db.py
niffler_ui_tests/fixtures/userdata_niffler/: db.py
niffler_ui_tests/src/database/: db_client.py  db_config.py  db_manager.py  db_response.py
niffler_ui_tests/src/playwright/: actions.py  assertions.py  base_page.py  browser_manager.py  locator.py
niffler_ui_tests/steps/: __init__.py  user_steps.py
niffler_ui_tests/support/: asserting.py  asserting_db.py  fake.py  fake_generator.py  logger.py  reports.py  utils.py
niffler_ui_tests/support/_conditions/: base_condition.py  database_condition.py  value_condition.py
niffler_ui_tests/tests/: conftest.py  test_example.py
niffler_ui_tests/tests/login_page/: test_editable.py  test_sign_up.py  test_visible.py
niffler_ui_tests/tests/main_page/: test_create_category.py  test_transition.py
(+90 files in other folders)
